--- a/PROYECTO-TIEMPO-BACKUP/package.json
+++ b/PROYECTO-TIEMPO-BACKUP/package.json
@@ -24,6 +24,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "^2.29.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
