--- a/PROYECTO-TIEMPO-BACKUP/package.json
+++ b/PROYECTO-TIEMPO-BACKUP/package.json
@@ -27,8 +27,7 @@
     "react-native-gesture-handler": "^2.29.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.12.1",
-    "react-native-svg-charts": "^5.4.0"
+    "react-native-svg": "^15.12.1"
   },
   "private": true,
   "devDependencies": {
